<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <EditText
        android:id="@+id/texto"
        android:hint="Texto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reset"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/cambiarActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cambiar Activity"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/cambiarTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cambiar"
        android:onClick="onClick"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
